--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "@supabase/supabase-js": "^2.52.1",
+    "axios": "^1.11.0",
     "buffer": "^6.0.3",
     "expo": "~53.0.20",
     "expo-document-picker": "~13.1.6",
